--- a/styles/main.css
+++ b/styles/main.css
@@ -350,8 +350,9 @@ nav {
     display:flex;
     flex-direction:column;
     align-items:center;
+    width: 50%;
     justify-content: center;
-    background:#333;
+    background:var(--color-de-listas);
     gap:20px;
     border-radius: 3px;
     padding:20px;
@@ -360,12 +361,14 @@ nav {
 #title-edit {
     padding:10px;
     border-radius: 3px;
+    width:90%;
 }
 
 #description-edit {
     padding:10px;
     height: 150px;
     border-radius: 3px;
+    width:90%;
     resize:none;
 }
 
@@ -375,10 +378,9 @@ nav {
 }
 
 .btns-edit {
-    padding:10px;
-    width:300px;
+    width:95%;
     display:flex;
-    justify-content:space-evenly;
+    gap:10px;
 }
 
 .edits {
